HVAC Backup 2/objects/Commission_Data__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Commission Data</relationshipLabel>
        <relationshipName>Commission_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Commission_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Commission Data</relationshipLabel>
        <relationshipName>Commission_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grill_Temp__c</fullName>
        <label>Grill Temp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pressure_psi__c</fullName>
        <label>Pressure (psi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Ampere__c</fullName>
        <label>System Ampere</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Voltage__c</fullName>
        <label>System Voltage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TDS_ppm__c</fullName>
        <label>TDS (ppm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pH__c</fullName>
        <label>pH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Commission Data</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Commission Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>